--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,8 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+#MAIL_DRIVER=sendgrid
+#SENDGRID_API_KEY=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
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
